2022-10-31T08:26:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3359713140 # 570
* notice: last 14d: unq all: 9 34
* notice: prev accum: outdated-unq outdated-all / unq all: 226 414 / 247 447
* notice: next accum: outdated-unq outdated-all / unq all: 226 414 / 248 448
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-31]

2022-10-31T01:50:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3357977587 # 569
* notice: last 14d: unq all: 9 33
* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 240 438
* notice: next accum: outdated-unq outdated-all / unq all: 226 414 / 247 447
* notice: prev exec diff / last date diff / accum: unq all: +7 +8 -0 -0 / +8 +9 -0 -0 / 8 9
* notice: removed / changed dates: [2022-10-16] / [2022-10-30]

2022-10-30T16:22:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356189875 # 568
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 240 438
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-30]

2022-10-30T08:20:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354714828 # 567
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 239 438
* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-16]

2022-10-30T01:49:20Z: