@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-31T08:26:29Z",
+  "timestamp" : "2022-10-31T16:25:48Z",
   "count_outdated" : 414,
   "uniques_outdated" : 226,
-  "count" : 448,
+  "count" : 449,
   "uniques" : 248,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
