@@ -1,3 +1,11 @@
+2022-10-31T16:25:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3362958318 # 571
+* notice: last 14d: unq all: 9 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 226 414 / 248 448
+* notice: next accum: outdated-unq outdated-all / unq all: 226 414 / 248 449
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-31]
+
 2022-10-31T08:26:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3359713140 # 570
 * notice: last 14d: unq all: 9 34
